src/test/ui/parser/mismatched-braces/missing-close-brace-in-struct.stderr
error: this file contains an un-closed delimiter
  --> $DIR/missing-close-brace-in-struct.rs:14:66
   |
LL | pub(crate) struct Bar<T> {
   |                          - un-closed delimiter
...
LL | fn main() {}
   |                                                                  ^

error: expected identifier, found keyword `trait`
  --> $DIR/missing-close-brace-in-struct.rs:4:1
   |
LL | trait T {
   | ^^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL | r#trait T {
   | ^^^^^^^

error: expected `:`, found `T`
  --> $DIR/missing-close-brace-in-struct.rs:4:7
   |
LL | trait T {
   |       ^ expected `:`

error: aborting due to 3 previous errors

